--- a/source/index.html
+++ b/source/index.html
@@ -18,33 +18,41 @@
     <!-- Шапка сайта -->
     <header class="page__header">
       <div class="container">
-        <!-- Логотип сайта -->
-        <a class="logo" href="index.html" aria-current="page">
-          <img class="logo__icon" src="#" width="999" height="999" alt="#">
-          <img class="logo__text" src="#" width="999" height="999" alt="#">
-        </a>
-        <!-- Навигация по сайту -->
-        <nav class="navigation">
-          <!-- Основные разделы сайта -->
-          <ul class="navigation__list">
-            <!-- Раздел сайта -->
-            <li class="navigation__item">
-              <a class="navigation__link navigation__link--current" href="index.html" aria-current="page">Главная</a>
-            </li>
-            <!-- Раздел сайта -->
-            <li class="navigation__item">
-              <a class="navigation__link" href="catalog.html">Каталог продукции</a>
-            </li>
-            <!-- Раздел сайта -->
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Подбор программы</a>
-            </li>
-          </ul>
-        </nav>
-        <!-- Бургер меню -->
-        <button class="toggle" type="button">
-          <span class="visually-hidden">Переключение меню</span>
-        </button>
+        <div class="page__header-wrapper">
+          <!-- Логотип сайта -->
+          <a class="page__header-logo logo" href="index.html" aria-current="page">
+            <picture>
+              <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo/logo-desktop.svg" width="70" height="59">
+              <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo/logo-tablet.svg" width="60" height="50">
+              <img class="logo__icon" src="images/logo/logo-mobile.svg" width="33" height="38" alt="Векторное изображение котика в оранжевой маске и плаще супергероя">
+            </picture>
+          </a>
+          <a class="page__header-logo logo" href="index.html" aria-current="page">
+            <img class="logo__text" src="images/logo/logo-text.svg" width="101" height="18" alt="Логотип с названием производителя в виде печатного текста Cat Energy">
+          </a>
+          <!-- Навигация по сайту -->
+          <nav class="navigation navigation--closed navigation--nojs">
+            <!-- Основные разделы сайта -->
+            <ul class="navigation__list">
+              <!-- Раздел сайта -->
+              <li class="navigation__item">
+                <a class="navigation__link navigation__link--current" href="index.html" aria-current="page">Главная</a>
+              </li>
+              <!-- Раздел сайта -->
+              <li class="navigation__item">
+                <a class="navigation__link" href="catalog.html">Каталог продукции</a>
+              </li>
+              <!-- Раздел сайта -->
+              <li class="navigation__item">
+                <a class="navigation__link" href="#">Подбор программы</a>
+              </li>
+            </ul>
+            <!-- Бургер меню -->
+            <button class="navigation__toggle" type="button">
+              <span class="visually-hidden">Переключение меню</span>
+            </button>
+          </nav>
+        </div>
       </div>
     </header>
     <!-- Основное содержание страницы -->
@@ -73,12 +81,12 @@
           <h2 class="visually-hidden">Основные программы питания</h2>
           <!-- Список программ питания -->
           <ul class="programs__list">
-            <li class="programs__item">
+            <li class="programs__item programs__item--slim">
               <h3 class="programs__subtitle">Похудение</h3>
               <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
               <a class="programs__link" href="#">Каталог Slim</a>
             </li>
-            <li class="programs__item">
+            <li class="programs__item programs__item--pro">
               <h3 class="programs__subtitle">Набор массы</h3>
               <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
               <a class="programs__link" href="#">Каталог Pro</a>
@@ -113,15 +121,17 @@
           <h2 class="result__heading">Живой пример</h2>
           <p class="result__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           <!-- Блок с описанием результата -->
-          <dl class="result__table">
-            <dt class="result__criterion">Снижение веса</dt>
-            <dd class="result__value">5 кг</dd>
-            <dt class="result__criterion">Затрачено времени</dt>
-            <dd class="result__value">60 дней</dd>
-          </dl>
-          <p class="result__conclusion">Затраты на питание:
-            <span class="result__number">15 000 РУБ.</span>
-          </p>
+          <ul class="result__list">
+            <li class="result__item">
+              <span class="result__criterion">Снижение веса</span>
+              <span class="result__value">5 кг</span>
+            </li>
+            <li class="result__item">
+              <span class="result__criterion">Затрачено времени</span>
+              <span class="result__value">60 дней</span>
+            </li>
+          </ul>
+          <p class="result__conclusion">Затраты на питание: 15 000 РУБ.</p>
           <!-- Блок со слайдером -->
           <!-- Резерв места -->
           <div class="result__preview">
@@ -133,22 +143,24 @@
               <img class="result__image" src="images/slider/before-mobile@1x.png" srcset="images/slider/before-mobile@2x.png 2x" width="280" height="256" alt="Изображение упитанного кота до применения функционального питания">
             </picture>
             <!-- Кот "после" -->
-            <picture>
-              <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/after-tablet-desktop@1x.webp 1x, images/slider/after-tablet-desktop@2x.webp 2x" width="560" height="512">
-              <source type="image/webp" media="(min-width: 320px)" srcset="images/slider/after-mobile@1x.webp 1x, images/slider/after-mobile@2x.webp 2x" width="280" height="256">
-              <source type="image/png" media="(min-width: 768px)" srcset="images/slider/after-tablet-desktop@1x.png 1x, images/slider/after-tablet-desktop@2x.png 2x" width="560" height="512">
-              <img class="result__image" src="images/slider/after-mobile@1x.png" srcset="images/slider/after-mobile@2x.png 2x" width="280" height="256" alt="Изображение похудевшего кота после применения функционального питания">
-            </picture>
+            <!-- Временно закомментирован для базовой стилизации
+              <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/after-tablet-desktop@1x.webp 1x, images/slider/after-tablet-desktop@2x.webp 2x" width="560" height="512">
+                <source type="image/webp" media="(min-width: 320px)" srcset="images/slider/after-mobile@1x.webp 1x, images/slider/after-mobile@2x.webp 2x" width="280" height="256">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/slider/after-tablet-desktop@1x.png 1x, images/slider/after-tablet-desktop@2x.png 2x" width="560" height="512">
+                <img class="result__image" src="images/slider/after-mobile@1x.png" srcset="images/slider/after-mobile@2x.png 2x" width="280" height="256" alt="Изображение похудевшего кота после применения функционального питания">
+              </picture>
+            -->
           </div>
         </div>
       </section>
       <!-- Секция с контактными данными -->
       <section class="contacts">
         <!-- Внутренний блок с контактными данными -->
-        <div class="contacts__wrapper">
-          <div class="container">
+        <div class="container">
+          <div class="contacts__wrapper">
             <h2 class="visually-hidden">Контактная информация</h2>
-            <h3 class="contacts__subtitle">Приглашаем к сотрудничеству дилеров!</h3>
+            <h3 class="contacts__subtitle">Приглашаем к&nbsp;сотрудничеству дилеров!</h3>
             <address class="contacts__address">
               <p class="contacts__address-text">
                 ул. Большая
@@ -166,9 +178,8 @@
     <footer class="page__footer">
       <div class="container">
         <!-- Логотип сайта -->
-        <a class="logo" href="index.html" aria-current="page">
-          <img class="logo__text" src="#" width="999" height="999" alt="#">
-          <!-- <span class="visually-hidden" lang="en">Логотип сайта Cat Energy</span> -->
+        <a class="page__footer-logo logo" href="index.html" aria-current="page">
+          <img class="logo__text" src="images/logo/logo-text.svg" width="128" height="24" alt="Логотип с названием производителя в виде печатного текста Cat Energy">
         </a>
         <!-- Список социальных сетей -->
         <ul class="social">
