Меняет класс навигации для проверки Дз

--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,8 @@
             <img class="logo__text" src="images/logo/logo-text.svg" width="101" height="18" alt="Логотип с названием производителя в виде печатного текста Cat Energy">
           </a>
           <!-- Навигация по сайту -->
-          <nav class="navigation navigation--closed navigation--nojs">
+          <nav class="navigation navigation--opened
+           navigation--nojs">
             <!-- Основные разделы сайта -->
             <ul class="navigation__list">
               <!-- Раздел сайта -->
