Проверяет проект на соответствие критериям: чистит дубли в правилах стилей, проверяет на переполнение

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,7 @@
     <!-- Шапка сайта -->
     <header class="header">
       <!-- Навигация по сайту -->
-      <nav class="header__navigation navigation navigation--secondary navigation--opened navigation--nojs">
+      <nav class="header__navigation navigation navigation--opened navigation--nojs">
         <!-- Логотип сайта -->
         <a class="header__logo logo logo--image" href="index.html" aria-current="page">
           <picture>
@@ -38,11 +38,11 @@
         <ul class="navigation__list">
           <!-- Раздел сайта -->
           <li class="navigation__item">
-            <a class="navigation__link" href="index.html" aria-current="page">Главная</a>
+            <a class="navigation__link" href="index.html">Главная</a>
           </li>
           <!-- Раздел сайта -->
           <li class="navigation__item">
-            <a class="navigation__link navigation__link--current" href="catalog.html" tabindex="-1">Каталог продукции</a>
+            <a class="navigation__link navigation__link--current" href="#" tabindex="-1">Каталог продукции</a>
           </li>
           <!-- Раздел сайта -->
           <li class="navigation__item">
@@ -357,7 +357,7 @@
     <footer class="footer">
       <div class="footer__wrapper container">
         <!-- Логотип сайта -->
-        <a class="footer__logo logo" href="index.html" aria-current="page">
+        <a class="footer__logo logo" href="index.html">
           <img class="logo__text" src="images/logo/logo-text.svg" width="128" height="24" alt="Логотип с названием производителя в виде печатного текста Cat Energy">
         </a>
         <!-- Список социальных сетей -->
