Редактирует блок Слайдера, вносит сопутствующие правки в html и css

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,11 +5,17 @@
   <meta charset="UTF-8">
   <title>Каталог продукции Cat Energy.</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="styles/styles.css">
+  <!-- preloader -->
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <!-- favicon -->
   <link rel="icon" href="favicon.ico"><!-- 32x32 -->
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicons/180.png"><!-- 180x180 -->
   <link rel="manifest" href="manifest.webmanifest">
+  <!-- styles -->
+  <link rel="stylesheet" href="styles/styles.css">
+  <!-- scripts -->
   <script src="scripts/index.js" defer></script>
 </head>
 
