--- a/source/index.html
+++ b/source/index.html
@@ -5,11 +5,17 @@
   <meta charset="UTF-8">
   <title>Cat Energy. Функциональное питание для котов.</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="styles/styles.css">
+  <!-- preloader -->
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <!-- favicon -->
   <link rel="icon" href="favicon.ico"><!-- 32x32 -->
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicons/180.png"><!-- 180x180 -->
   <link rel="manifest" href="manifest.webmanifest">
+  <!-- styles -->
+  <link rel="stylesheet" href="styles/styles.css">
+  <!-- scripts -->
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -128,18 +134,20 @@
               <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/before-tablet-desktop@1x.webp 1x, images/slider/before-tablet-desktop@2x.webp 2x" width="560" height="512">
               <source type="image/webp" media="(min-width: 320px)" srcset="images/slider/before-mobile@1x.webp 1x, images/slider/before-mobile@2x.webp 2x" width="280" height="256">
               <source type="image/png" media="(min-width: 768px)" srcset="images/slider/before-tablet-desktop@1x.png 1x, images/slider/before-tablet-desktop@2x.png 2x" width="560" height="512">
-              <img class="slider__image" src="images/slider/before-mobile@1x.png" srcset="images/slider/before-mobile@2x.png 2x" width="280" height="256" alt="Изображение упитанного кота до применения функционального питания">
+              <img class="slider__image slider__image--after" src="images/slider/before-mobile@1x.png" srcset="images/slider/before-mobile@2x.png 2x" width="280" height="256" alt="Изображение упитанного кота до применения функционального питания">
             </picture>
+            <div class="slider__curtain">
+              <button class="slider__button" type="button">
+                <span class="visually-hidden">Передвинуть ползунок слайдера</span>
+              </button>
+            </div>
             <!-- Кот "после" -->
             <picture>
               <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/after-tablet-desktop@1x.webp 1x, images/slider/after-tablet-desktop@2x.webp 2x" width="560" height="512">
               <source type="image/webp" media="(min-width: 320px)" srcset="images/slider/after-mobile@1x.webp 1x, images/slider/after-mobile@2x.webp 2x" width="280" height="256">
               <source type="image/png" media="(min-width: 768px)" srcset="images/slider/after-tablet-desktop@1x.png 1x, images/slider/after-tablet-desktop@2x.png 2x" width="560" height="512">
-              <img class="slider__image" src="images/slider/after-mobile@1x.png" srcset="images/slider/after-mobile@2x.png 2x" width="280" height="256" alt="Изображение похудевшего кота после применения функционального питания">
+              <img class="slider__image slider__image--before" src="images/slider/after-mobile@1x.png" srcset="images/slider/after-mobile@2x.png 2x" width="280" height="256" alt="Изображение похудевшего кота после применения функционального питания">
             </picture>
-            <button class="slider__button" type="button">
-              <span class="visually-hidden">Передвинуть ползунок слайдера</span>
-            </button>
           </div>
         </div>
       </section>
