--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,7 +22,7 @@
 <body class="page__body">
   <div class="page__wrapper">
     <!-- Шапка сайта -->
-    <header class="header">
+    <header class="header" data-test="header">
       <!-- Навигация по сайту -->
       <nav class="header__navigation navigation navigation--opened navigation--nojs">
         <!-- Логотип сайта -->
@@ -59,7 +59,7 @@
     </header>
     <!-- Основное содержание страницы -->
     <main class="main">
-      <section class="catalog">
+      <section class="catalog" data-test="catalog">
         <div class="catalog__wrapper container">
           <h1 class="catalog__title">Каталог продукции</h1>
           <!-- Список продукции -->
@@ -272,7 +272,7 @@
 
       </section>
       <!-- Секция с дополнительными товарами -->
-      <section class="additionally container">
+      <section class="additionally container" data-test="additional">
         <h2 class="additionally__heading">Дополнительные товары</h2>
         <!-- Список дополнительных товаров -->
         <ul class="additionally__products">
