--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
 <body class="page__body">
   <div class="page__wrapper">
     <!-- Шапка сайта -->
-    <header class="header">
+    <header class="header" data-test="header">
       <!-- Навигация по сайту -->
       <nav class="header__navigation navigation navigation--opened navigation--nojs">
         <!-- Логотип сайта -->
@@ -60,7 +60,7 @@
     <!-- Основное содержание страницы -->
     <main class="main ">
       <!-- Секция с вступительной частью -->
-      <section class="intro">
+      <section class="intro" data-test="hero">
         <div class="intro__wrapper container">
           <h1 class="intro__title">Функциональное питание для котов</h1>
           <p class="intro__slogan">Занялся собой? Займись котом!</p>
@@ -78,7 +78,7 @@
         </div>
       </section>
       <!-- Секция с программами питания -->
-      <section class="programs container">
+      <section class="programs container" data-test="programs">
         <h2 class="visually-hidden">Основные программы питания</h2>
         <!-- Список программ питания -->
         <ul class="programs__list">
@@ -95,7 +95,7 @@
         </ul>
       </section>
       <!-- Секция с преимуществами функционального питания -->
-      <section class="advantages container">
+      <section class="advantages container" data-test="features">
         <h2 class="advantages__heading">Как это работает</h2>
         <!-- Преимущества функционального питания -->
         <ul class="advantages__list">
@@ -114,7 +114,7 @@
         </ul>
       </section>
       <!-- Секция с результатом программы -->
-      <section class="result">
+      <section class="result" data-test="proof">
         <div class="result__wrapper container">
           <h2 class="result__heading">Живой пример</h2>
           <p class="result__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
@@ -152,7 +152,7 @@
         </div>
       </section>
       <!-- Секция с контактными данными -->
-      <section class="contacts contacts--primary">
+      <section class="contacts contacts--primary" data-test="contacts">
         <!-- Внутренний блок с контактными данными -->
         <div class="contacts__wrapper container">
           <h2 class="visually-hidden">Контактная информация</h2>
@@ -173,7 +173,7 @@
       </section>
     </main>
     <!-- Подвал сайта -->
-    <footer class="footer">
+    <footer class="footer" data-test="footer">
       <div class="footer__wrapper container">
         <!-- Логотип сайта -->
         <a class="footer__logo logo" href="index.html" aria-current="page">
