--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
     <!-- Шапка сайта -->
     <header class="header" data-test="header">
       <!-- Навигация по сайту -->
-      <nav class="header__navigation navigation navigation--opened navigation--nojs">
+      <nav class="header__navigation navigation navigation--closed navigation--nojs">
         <!-- Логотип сайта -->
         <a class="header__logo logo logo--image" href="index.html" aria-current="page">
           <picture>
