Добавляет доступное описание к ссылке на сайт разработчика

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -388,7 +388,7 @@
           </li>
         </ul>
         <!-- Блок с логотипом сайта разработчика -->
-        <a class="footer__developer developer" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="footer__developer developer" href="https://htmlacademy.ru/intensive/adaptive" arial-label="Перейти на сайт разработчика HTML Academy">HTML Academy</a>
       </div>
     </footer>
   </div>
